<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F5E9"
    android:orientation="vertical"
    tools:context="com.example.android.bmiapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:fillViewport="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/intro1"
                    android:textColor="#888"
                    android:textIsSelectable="true"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/intro2"
                    android:textColor="#888"
                    android:textIsSelectable="true"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/intro3"
                    android:textColor="#888"
                    android:textIsSelectable="true"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:background="#C8E6C9"
            android:fontFamily="casual"
            android:gravity="center"
            android:onClick="activity2"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/button1"
            android:textAllCaps="true"
            android:textColor="#4CAF50"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>